[gd_scene load_steps=2 format=3 uid="uid://c7dsawc4wxw3i"]

[ext_resource type="Script" path="res://src/main_menu.gd" id="1_adiwn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_adiwn")

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
alignment = 1

[node name="BtnNewGame" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "New Game"

[node name="BtnStageSelector" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Stage Selection"

[node name="BtnExit" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 73.0

[connection signal="pressed" from="ButtonsContainer/BtnNewGame" to="." method="_on_btn_new_game_pressed"]
[connection signal="pressed" from="ButtonsContainer/BtnExit" to="." method="_on_btn_exit_pressed"]
